# Pane

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  collect.rs  config.rs  main.rs  tray.rs  tui_main.rs
src/gui/: mod.rs  theme.rs  widgets.rs
src/gui/panels/: cpu.rs  dashboard.rs  disk.rs  gpu.rs  gpu_control.rs  memory.rs  mod.rs  network.rs  processes.rs  snapshot.rs  vram_calc.rs
src/metrics/: system.rs
src/metrics/gpu/: mod.rs  nvml.rs  pdh.rs
src/ui/: cpu.rs  dashboard.rs  disk.rs  gpu.rs  gpu_control.rs  memory.rs  mod.rs  network.rs  processes.rs
