[package]
name = "pane"
version = "1.0.0"
edition = "2024"
authors = ["Tushar Sharma <Txshar@proton.me>"]
description = "A transparent window into your system. Cross-platform GPU-aware system monitor."
repository = "https://github.com/TxsharDev/pane"
license = "MIT"
readme = "README.md"
keywords = ["system-monitor", "gpu", "tui", "performance", "nvidia"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
sysinfo = "0.34"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Performance",
    "Win32_Graphics_Direct3D",
] }

[target.'cfg(target_os = "linux")'.dependencies]

[features]
default = ["nvidia"]
nvidia = []
amd = []

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
